# antenna

./: .dockerignore  .editorconfig  .gitignore  .pyup.yml  .readthedocs.yml  .travis.yml  CONTRIBUTING.rst  Dockerfile  Dockerfile.dev  Dockerfile.motos3  Makefile  README.rst  circle.yml  dev.env  docker-compose.override.yml  docker-compose.yml  justfile  prod.env  pyproject.toml  requirements-dev.txt  requirements-newrelic.txt  requirements.in  requirements.txt  settings_test.ini  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build-and-push.yml
antenna/: __init__.py  app.py  breakpad_resource.py  configlib.py  crashmover.py  datetimeutil.py  gunicornhooks.py  gunicornworker.py  health_resource.py  heartbeat.py  libdockerflow.py  liblogging.py  libmarkus.py  libsentry.py  loggingmock.py  metrics.py  mini_poster.py  s3mock.py  sentry.py  statsd_metrics.yaml  throttler.py  util.py  wsgi.py
antenna/ext/: crashpublish_base.py  crashstorage_base.py
antenna/ext/fs/: crashstorage.py
antenna/ext/gcs/: crashstorage.py
antenna/ext/pubsub/: crashpublish.py
antenna/ext/s3/: connection.py  crashstorage.py
antenna/ext/sqs/: crashpublish.py
antenna/lib/: datetimeutil.py  ooid.py  storage.py
docker/: Dockerfile  Dockerfile.fakesentry  Dockerfile.pubsub  entrypoint.sh  run_black.sh  run_lint.sh  run_pubsub.sh  run_setup.sh  run_tests.sh  run_tests_in_docker.sh  run_web.sh
docker/config/: .env.dist  local_dev.env  my.env.dist  test.env
docker/images/fakesentry/: Dockerfile
docker/images/grafana/: Dockerfile
docker/images/nginx/: Dockerfile  client_body_timeout.conf.template  nginx.conf  upstream.conf.template
docker/images/pubsub-emulator/: Dockerfile
docs/: Makefile  antenna.rst  architecture.rst  breakpad_reporting.rst  conf.py  configuration.rst  deploy.rst  dev.rst  index.rst  modules.rst  overview.rst  requirements.txt  spec_v1.rst
docs/_templates/: layout.html
docs/drawio/: README.rst
requirements/: constraints.txt  default.txt
systemtest/: README.rst  conftest.py  pytest.ini  test_20mblimit.py  test_25mblimit.py  test_content_length.py  test_discards.py  test_dockerflow.py  test_env.sh  test_post_crash.py
testlib/: __init__.py  loggingmock.py  mini_poster.py  s3mock.py
tests/: README.rst  conftest.py  test_app.py  test_basic.py  test_bin.py  test_breakpad_resource.py  test_configlib.py  test_crashmover.py  test_crashstorage.py  test_datetimeutil.py  test_fs_crashstorage.py  test_gcs_crashstorage.py  test_health_resource.py  test_libdockerflow.py  test_mini_poster.py  test_noopcrashstorage.py  test_ooid.py  test_pubsub_crashpublish.py  test_sentry.py  test_storage.py  test_throttler.py  test_util.py
tests/data/: config_test.ini  socorrofake1_withuuid.raw
tests/systemtest/: README.rst  conftest.py  mini_poster.py  requirements.txt  run_tests.sh  test_20mblimit.py  test_content_length.py  test_discards.py  test_post_crash.py
tests/testlib/: __init__.py
tests/unittest/: README.rst  conftest.py  test_app.py  test_bin.py  test_breakpad_resource.py  test_crashmover.py  test_crashstorage.py  test_datetimeutil.py  test_fs_crashstorage.py  test_gcs_crashstorage.py  test_health_resource.py  test_libdockerflow.py  test_metrics.py  test_mini_poster.py  test_noopcrashpublish.py  test_ooid.py  test_pubsub_crashpublish.py  test_s3_crashstorage.py  test_sentry.py  test_sqs_crashpublish.py  test_throttler.py  test_util.py
tests/unittest/data/: socorrofake1.raw  socorrofake2.raw
