[project]
name = "Antenna"
description = "The collector component of the Socorro crash ingestion pipeline"
readme = "README.rst"
version = "1.0.0"  # Required, but unused
requires-python = "==3.11.*"
dependencies = [
    "attrs==25.4.0",
    "bandit==1.9.3",
    "click==8.2.1",
    "dockerflow==2026.1.26",
    "everett==3.5.0",
    "falcon==4.2.0",
    "fillmore==2.2.0",
    "freezegun==1.5.5",
    "google-cloud-pubsub==2.34.0",
    "google-cloud-storage==3.8.0",
    "gunicorn==24.1.1",
    "isodate==0.7.2",
    "markus[datadog]==5.2.0",
    "more-itertools==10.8.0",
    "obs-common==2026.1.21",
    "pytest==9.0.2",
    "requests==2.32.5",
    "ruff==0.14.14",
    "sentry-sdk==2.51.0",
    "sphinx==9.0.4",
    "sphinx-rtd-theme==3.1.0",
    "urlwait==1.0",
    "werkzeug==3.1.5",
]

[dependency-groups]
devcontainer = [
    "ipython",
]

[project.urls]
Homepage = "https://github.com/mozilla-services/antenna"

[tool.uv]
environments = ["""
    sys_platform == 'linux' and
    platform_machine == 'x86_64' and
    implementation_name == 'cpython'
"""]
package = false

[[tool.uv.index]]
name = "cavendish"
url = "https://us-python.pkg.dev/moz-fx-cavendish-prod/cavendish-prod-python/simple/"

[tool.uv.sources]
obs-common = { index = "cavendish" }

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Enable pycodestyle (E), pyflakes (F), bugbear (B), and bandit (S) rules
select = ["E", "F", "B", "S"]
ignore = ["E501"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"systemtest/*" = ["S101"]


[tool.pytest.ini_options]
addopts = "-rsxX --tb=native --showlocals"
norecursedirs = [".git", "docs", "bin"]
testpaths = "tests/"

filterwarnings = [
    "error",
    # Falcon currently uses cgi which is going away in python 3.13
    "ignore:'cgi' is deprecated and slated for removal in Python 3.13:DeprecationWarning:falcon",
    # sentry-sdk has a Falcon integration that needs some help and is currently
    # using a thing in Falcon that kicks up a DeprecatedWarning
    "ignore:The api_helpers module.*:falcon.util.deprecation.DeprecatedWarning",
]


[tool.paul-mclendahand]
github_user = "mozilla-services"
github_project = "antenna"
main_branch = "main"


[tool.release]
github_user = "mozilla-services"
github_project = "antenna"
bugzilla_product = "Socorro"
bugzilla_component = "Infra"
main_branch = "main"
tag_name_template = "v%Y.%m.%d"


[tool.service-status]
main_branch = "main"
hosts = [
    "stage=https://crash-reports.allizom.org",
    "prod=https://crash-reports.mozilla.com",
]
