[project]
name = "Antenna"
description = "The collector component of the Socorro crash ingestion pipeline"
readme = "README.rst"
version = "1.0.0"  # Required, but unused
requires-python = "==3.11.*"
dependencies = [
    "attrs",
    "bandit",
    "click",
    "dockerflow",
    "everett",
    "falcon",
    "fillmore",
    "freezegun",
    "google-cloud-pubsub",
    "google-cloud-storage",
    "gunicorn",
    "isodate",
    "markus[datadog]",
    "more-itertools",
    "obs-common",
    "pytest",
    "requests",
    "ruff",
    "sentry-sdk",
    "sphinx",
    "sphinx-rtd-theme",
    "urlwait",
    "werkzeug",
]

[dependency-groups]
devcontainer = [
    "ipython",
]

[project.urls]
Homepage = "https://github.com/mozilla-services/antenna"

[tool.uv]
environments = ["""
    sys_platform == 'linux' and
    platform_machine == 'x86_64' and
    implementation_name == 'cpython'
"""]
package = false

[[tool.uv.index]]
name = "cavendish"
url = "https://us-python.pkg.dev/moz-fx-cavendish-prod/cavendish-prod-python/simple/"

[tool.uv.sources]
obs-common = { index = "cavendish" }

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Enable pycodestyle (E), pyflakes (F), bugbear (B), and bandit (S) rules
select = ["E", "F", "B", "S"]
ignore = ["E501"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"systemtest/*" = ["S101"]


[tool.pytest.ini_options]
addopts = "-rsxX --tb=native --showlocals"
norecursedirs = [".git", "docs", "bin"]
testpaths = "tests/"

filterwarnings = [
    "error",
    # Falcon currently uses cgi which is going away in python 3.13
    "ignore:'cgi' is deprecated and slated for removal in Python 3.13:DeprecationWarning:falcon",
    # sentry-sdk has a Falcon integration that needs some help and is currently
    # using a thing in Falcon that kicks up a DeprecatedWarning
    "ignore:The api_helpers module.*:falcon.util.deprecation.DeprecatedWarning",
]


[tool.paul-mclendahand]
github_user = "mozilla-services"
github_project = "antenna"
main_branch = "main"


[tool.release]
github_user = "mozilla-services"
github_project = "antenna"
bugzilla_product = "Socorro"
bugzilla_component = "Infra"
main_branch = "main"
tag_name_template = "v%Y.%m.%d"


[tool.service-status]
main_branch = "main"
hosts = [
    "stage=https://crash-reports.allizom.org",
    "prod=https://crash-reports.mozilla.com",
]
